[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true
exclude = [
    "^do.py",
    "^venv/",
]

[tool.ruff]
target-version = "py38"
exclude = [
    "do.py",
]

[tool.ruff.format]
preview = true

[tool.ruff.lint]
preview = true
select = [
    "ALL",
]
ignore = [
    "ANN401",
    "CPY001",
    "D",
    "DOC201",
    "DOC501",
]

[tool.ruff.lint.isort]
required-imports = [
    "from __future__ import annotations",
]
