[metadata]
name = aio-celery
version = attr: aio_celery.__version__
url = https://github.com/earlgreyness/aio-celery
author = Kirill Kondratenko
author_email = earlgreatness@gmail.com
description = Celery worker for running asyncio coroutine tasks
long_description = file: README.md
long_description_content_type = text/markdown
keywords = asyncio, celery
classifiers =
    Development Status :: 4 - Beta
    Topic :: System :: Distributed Computing
    Topic :: Software Development :: Object Brokering
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: POSIX :: Linux

[options]
python_requires = >=3.7
packages = aio_celery
install_requires =
    aio-pika

[options.extras_require]
redis =
    redis

[options.entry_points]
console_scripts =
    aio_celery = aio_celery.__main__:main
