[metadata]
name = aio-celery
version = attr: aio_celery.__version__
url = https://github.com/earlgreyness/aio-celery
author = Kirill Kondratenko
author_email = earlgreatness@gmail.com
description = Celery worker for running asyncio coroutine tasks
long_description = file: README.md
long_description_content_type = text/markdown
keywords = asyncio, celery
classifiers =
    Development Status :: 4 - Beta
    Topic :: System :: Distributed Computing
    Topic :: System :: Networking
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Object Brokering
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Intended Audience :: Developers
    Operating System :: MacOS
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Framework :: Celery
    Typing :: Typed

[options]
python_requires = >=3.8
packages = aio_celery
install_requires =
    aio-pika >= 9.0.0

[options.extras_require]
redis =
    redis >= 4.2.0  # earliest version adding support of async/await operations

[options.entry_points]
console_scripts =
    aio_celery = aio_celery.__main__:main
